# ClaudeHydra-v4

./: .gitignore  .mcp.json  .vercelignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  biome.json  dev.bat  dev.vbs  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
.husky/: pre-commit
.serena/: project.yml
backend/: .gitattributes  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
backend/grafana/provisioning/dashboards/: default.yml
backend/grafana/provisioning/dashboards/json/: jaskier-apps.json
backend/grafana/provisioning/datasources/: flyio.yml
backend/migrations/: 2026030901_008_api_keys.sql  2026031301_025_agents_config.sql  2026031401_026_compaction_settings.sql  2026031402_027_message_indexes.sql  2026031403_028_session_tags.sql  2026031404_029_rate_limits.sql
backend/scripts/: grafana-setup-token.sh
backend/src/: auth.rs  auto_qa.rs  browser_proxy.rs  handlers.rs  lib.rs  main.rs  model_registry.rs  models.rs  oauth.rs  oauth_github.rs  oauth_google.rs  oauth_vercel.rs  ocr.rs  rate_limits.rs  state.rs  swarm.rs  system_monitor.rs
backend/src/ai_gateway/: handlers.rs
backend/src/handlers/: agents.rs  analytics.rs  health.rs  mod.rs  prompt.rs  settings.rs  streaming.rs  tags.rs
backend/src/mcp/: client.rs  config.rs  mod.rs  server.rs
backend/src/tools/: fly_tools.rs  fs_tools.rs  git_tools.rs  github_tools.rs  mod.rs  vercel_tools.rs  zip_tools.rs
backend/src/tools/web/: fetch.rs  mod.rs
backend/tests/: api_tests.rs  health_test.rs  integration_oauth.rs  integration_ocr.rs  integration_streaming.rs
docs/: CONTRIBUTING.md  README.md  openapi.yaml
docs/adr/: 001-basehhydrastate-macro-vs-proc-macro.md  002-source-only-packages.md  003-persistent-context-over-storage-state.md  004-cargo-workspace-shared-crates.md  005-ort-pinned-to-rc.md
e2e/: agents.spec.ts  chat.spec.ts  home.spec.ts  navigation.spec.ts  responsive.spec.ts  session.spec.ts  settings.spec.ts  sidebar.spec.ts  test.ts
e2e/selectors/: constants.ts
public/: sw.js
public/wasm/: jaskier_wasm_core.js  jaskier_wasm_core_bg.wasm
src/: main.tsx
src/components/atoms/: Badge.tsx  Button.tsx  Card.tsx  index.ts
src/components/molecules/: CodeBlock.tsx  CommandPalette.tsx  ModelSelector.tsx  StatusIndicator.tsx  TagChip.tsx  TagInput.tsx
src/components/organisms/: AppShell.tsx  ErrorBoundary.tsx  Sidebar.tsx  StatusFooter.tsx  TabBar.tsx
src/components/organisms/__tests__/: Sidebar.test.tsx
src/components/organisms/sidebar/: SessionItem.tsx  useSidebarLogic.ts
src/contexts/: ThemeContext.tsx
src/features/agents/components/: AgentsView.tsx
src/features/agents/hooks/: useAgents.ts
src/features/analytics/components/: AnalyticsView.tsx
src/features/analytics/hooks/: useAnalytics.ts
src/features/chat/: index.ts
src/features/chat/api/: claudeStream.ts
src/features/chat/components/: AgentActivityPanel.tsx  ArtifactPanel.tsx  AttachmentPreview.tsx  ChatInput.tsx  ClaudeChatView.tsx  CompletionFeedback.tsx  FallbackBanner.tsx  ImagePreview.tsx  MessageBubble.tsx  StreamingIndicator.tsx  ToolResultRenderer.tsx  VirtualizedMessageArea.tsx  messageParser.ts  useChatFileHandler.ts
src/features/chat/hooks/: useChat.ts  useChatMessages.ts  useChatStreaming.ts  usePartnerSessions.ts  useSessionSync.ts  useTags.ts
src/features/delegations/hooks/: useDelegations.ts
src/features/health/hooks/: useHealth.ts  useHealthDashboard.ts
src/features/history/components/: HistoryView.tsx
src/features/home/components/: HomePage.tsx
src/features/logs/components/: LogsView.tsx
src/features/settings/components/: CompactionSection.tsx  CompletionSoundSection.tsx  OAuthBanner.tsx  SettingsView.tsx
src/features/settings/hooks/: useBrowserProxy.ts
src/i18n/: en.json  index.ts  pl.json
src/shared/api/: client.ts  partner-client.ts  schemas.ts
src/shared/api/__tests__/: schemas.test.ts
src/shared/hooks/: useCompletionFeedback.ts  useGoogleAuthStatus.ts  useSettings.ts  useViewTheme.ts  useWebSocketChat.ts
src/shared/types/: index.ts
src/stores/: types.ts  viewStore.ts
src/stores/__tests__/: viewStore.test.ts
src/stores/slices/: sessionSlice.ts  viewSlice.ts
src/styles/: base.css  globals.css
