[package]
name = "claudehydra-backend"
version = "4.0.0"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
jaskier-core = { path = "../../../crates/jaskier-core", features = ["otel"] }
jaskier-hydra-state = { path = "../../../crates/jaskier-hydra-state" }
jaskier-oauth = { path = "../../../crates/jaskier-oauth" }
jaskier-browser = { path = "../../../crates/jaskier-browser" }
jaskier-tools = { path = "../../../crates/jaskier-tools", features = ["ocr-handlers"] }
jaskier-db = { path = "../../../crates/jaskier-db" }
jaskier-ai-modules = { path = "../../../crates/jaskier-ai-modules" }
jaskier-swarm = { path = "../../../crates/jaskier-swarm" }
jaskier-collab = { path = "../../../crates/jaskier-collab" }
jaskier-vault = { path = "../../../crates/jaskier-vault" }
jaskier-sandbox = { path = "../../../crates/jaskier-sandbox" }
jaskier-memory-pruning = { path = "../../../crates/jaskier-memory-pruning" }
jaskier-model-router = { path = "../../../crates/jaskier-model-router" }
jaskier-session-auth = { path = "../../../crates/jaskier-session-auth" }
jaskier-semantic-cache = { path = "../../../crates/jaskier-semantic-cache", features = ["compressor"] }
axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true }
tower-http = { workspace = true }
tower_governor = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
dotenvy = { workspace = true }
subtle = { workspace = true }
futures-util = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
async-stream = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
dirs = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
url = { workspace = true }
http = { workspace = true }
pdf-extract = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
shuttle-axum = { version = "0.57.0", optional = true }
shuttle-runtime = { version = "0.57.0", optional = true }

[features]
default = []
shuttle = ["dep:shuttle-axum", "dep:shuttle-runtime"]
test-helpers = []

[[bin]]
name = "migrate-credentials-to-vault"
path = "src/bin/migrate_credentials_to_vault.rs"

[dev-dependencies]
jaskier-core = { path = "../../../crates/jaskier-core", features = ["test-helpers"] }
tower = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
